#                               -*- Mode: Sh -*- 
# configure.in
# Copyright © 2000-03 Laboratoire de Biologie Informatique et Théorique.
# Author           : Martin Larose
# Created On       : Thu Aug 31 13:07:53 2000
# $Revision$
# $Id$

dnl Process this file with autoconf to produce a configure script.


AC_INIT(lib/mccparser.h)

PACKAGE=mccparser
VERSION=1.3
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")

AC_PROG_MAKE_SET

AC_PROG_CXX
AC_LANG_CPLUSPLUS
AC_CANONICAL_HOST
AC_PROG_LEX
AC_PROG_YACC

if eval "test -z \"`echo $GXX`\""; then          # not gnu compiler
    case "$host" in
    *-sgi-*)
	CXXFLAGS="$CXXFLAGS -O2 -woff 1681 -ptused -LANG:std"
  	DEPFLAGS="-M"
  	LDFLAGS=""
	LDNAMEPARAM="-Wl,-soname,"
  	LINKOPTIONS="-woff 47"
	;;
    *-sun-*)
	CXXFLAGS="$CXXFLAGS -O2"
	DEPFLAGS="-xM1"
        LDFLAGS=""
	LDNAMEPARAM="-h"
	LINKOPTIONS="-G"
	;;
    esac;
elif eval "test \"`echo $GXX`\" = yes"; then     # gnu compiler
	CXXFLAGS="$CXXFLAGS -Wall";
	DEPFLAGS="-MM"
	LDNAMEPARAM="-Wl,-soname,"
	LDFLAGS=""
	LINKOPTIONS="-shared";
fi


AC_PROG_INSTALL
AC_PATH_PROG(AR,ar)

AC_ARG_WITH(malloc,
[  --with-malloc           replace STL allocator with malloc],
AC_DEFINE(__USE_MALLOC),
)


AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(DEPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(LDNAMEPARAM)
AC_SUBST(LINKOPTIONS)

AC_OUTPUT( Makefile docs/Makefile lib/Makefile )
