#                               -*- Mode: Sh -*- 
# configure.in
# Copyright © 2000-03 Laboratoire de Biologie Informatique et Théorique.
# Author           : Martin Larose
# Created On       : Thu Aug 31 13:07:53 2000
# $Revision$
# $Id$

dnl Process this file with autoconf to produce a configure script.


AC_INIT(lib/mccparser.h)
AC_CONFIG_HEADER(config.h)

PACKAGE=mccparser
VERSION=1.5
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")

AC_PROG_MAKE_SET

AC_PROG_CXX
AC_LANG(C++)

AC_CANONICAL_HOST
AC_DEFINE_UNQUOTED(VERSION_CPU, "$host_cpu")
AC_DEFINE_UNQUOTED(VERSION_VENDOR, "$host_vendor")
AC_DEFINE_UNQUOTED(VERSION_OS, "$host_os")

AC_PROG_LEX
AC_PROG_YACC
AC_PATH_PROG(AR,ar)
AC_PROG_INSTALL

if eval "test -z \"`echo $GXX`\""; then          # not gnu compiler
    case "$host" in
    *-sgi-*)
	CXXFLAGS="$CXXFLAGS -O2 -LANG:std"
  	DEPFLAGS="-M"
  	LDFLAGS=""
	LDNAMEPARAM="-Wl,-soname,"
  	LINKOPTIONS="-shared"
	ARXX="$CXX"
	AROPTIONS="-ar -o"
	;;
    *-sun-*)
	CXXFLAGS="$CXXFLAGS -xO2"
	DEPFLAGS="-xM1"
        LDFLAGS=""
	LDNAMEPARAM="-h"
	LINKOPTIONS="-G"
	ARXX="$CXX"
	AROPTIONS="-xar -o"
	;;
    esac;
elif eval "test \"`echo $GXX`\" = yes"; then     # gnu compiler
	CXXSHFLAGS="$CXXFLAGS -Wall";
	CXXFLAGS="$CXXFLAGS -Wall -fPIC";
	DEPFLAGS="-MM"
	LDNAMEPARAM="-Wl,-soname,"
	LDFLAGS=""
	LINKOPTIONS="-shared";
	ARXX="$AR"
	AROPTIONS="crs"
fi


AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(DEPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(LDNAMEPARAM)
AC_SUBST(LINKOPTIONS)
AC_SUBST(ARXX)
AC_SUBST(AROPTIONS)

AC_OUTPUT([
Makefile
mccparser-config
docs/Makefile
lib/Makefile
],[
chmod +x mccparser-config
])
