#                               -*- Mode: Sh -*- 
# configure.in
# Copyright © 2000-03 Laboratoire de Biologie Informatique et Théorique.
# Author           : Martin Larose
# Created On       : Thu Aug 31 13:07:53 2000
# $Revision$
# $Id$

dnl Process this file with autoconf to produce a configure script.


AC_INIT(MC-CParser, 1.5.0, [mcsym-user@iro.umontreal.ca], [mccparser])
AC_CONFIG_HEADER(config.h)

PACKAGE=mccparser
VERSION=$PACKAGE_VERSION
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")

AC_PROG_MAKE_SET

AC_PROG_CXX
AC_LANG(C++)

AC_CANONICAL_HOST
AC_DEFINE_UNQUOTED(VERSION_CPU, "$host_cpu")
AC_DEFINE_UNQUOTED(VERSION_VENDOR, "$host_vendor")
AC_DEFINE_UNQUOTED(VERSION_OS, "$host_os")

AC_PROG_LEX
AC_PROG_YACC
AC_PATH_PROG(AR,ar)
AC_PROG_INSTALL

AC_ARG_ENABLE(shared,
[  --enable-shared         build dynamic library (default=yes) ],
SHARED=$enableval,SHARED=yes
)
AC_SUBST(SHARED)

AC_ARG_ENABLE(static,
[  --enable-static         build dynamic library (default=yes) ],
STATIC=$enableval,STATIC=yes
)
AC_SUBST(STATIC)

if eval "test -z \"`echo $GXX`\""; then          # not gnu compiler
    case "$host" in
    *-sgi-*)
	CXXFLAGS="$CXXFLAGS -O2 -LANG:std"
  	DEPFLAGS="-M"
  	LDFLAGS=""
	LDNAMEPARAM="-Wl,-soname,"
  	LINKOPTIONS="-shared"
	ARXX="$CXX"
	AROPTIONS="-ar -o"
	;;
    *-sun-*)
	CXXFLAGS="$CXXFLAGS -xO2"
	DEPFLAGS="-xM1"
        LDFLAGS=""
	LDNAMEPARAM="-h"
	LINKOPTIONS="-G"
	ARXX="$CXX"
	AROPTIONS="-xar -o"
	;;
    esac;
elif eval "test \"`echo $GXX`\" = yes"; then     # gnu compiler
	DEPFLAGS="-M"
	case "$host" in
	    *-darwin*)
		CXXFLAGS="$CXXFLAGS -Wall"
		LINKOPTIONS="-dynamiclib"
		LDNAMEPARAM="-install_name,"
		LIBEXT="dylib"
		LIBALLFLAGSTART=""
		LIBALLFLAGSTOP=""
                ARXX="$AR"
                AROPTIONS="crs";;
	    *)
		CXXFLAGS="$CXXFLAGS -Wall -fPIC"
		LINKOPTIONS="-shared"
		LDNAMEPARAM="-Wl,-soname,"
		LIBEXT="so"
		LIBALLFLAGSTART="-Wl,-whole-archive"
		LIBALLFLAGSTOP="-Wl,-no-whole-archive";
		ARXX="$AR"
		AROPTIONS="crs";;
	esac;
fi

AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(CXXFLAGS)
AC_SUBST(DEPFLAGS)
AC_SUBST(LINKOPTIONS)
AC_SUBST(LDNAMEPARAM)
AC_SUBST(LIBEXT)
AC_SUBST(LDFLAGS)
AC_SUBST(LIBALLFLAGSTART)
AC_SUBST(LIBALLFLAGSTOP)
AC_SUBST(ARXX)
AC_SUBST(AROPTIONS)

AC_CONFIG_FILES([Makefile lib/Makefile docs/Makefile])
AC_CONFIG_FILES([mccparser-config],[chmod +x mccparser-config])
AC_CONFIG_FILES([stamp-h])
AC_OUTPUT
